Apply ktlint & detekt changes