@@ -115,6 +115,7 @@ android {
         classpath = ktlint
         mainClass.set("com.pinterest.ktlint.Main")
         args = listOf("src/**/*.kt")
+        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
     }
 
     val ktlintFormat by tasks.creating(JavaExec::class) {
@@ -125,6 +126,7 @@ android {
         classpath = ktlint
         mainClass.set("com.pinterest.ktlint.Main")
         args = listOf("-F", "src/**/*.kt")
+        jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
     }
 
     packagingOptions {
